# Feedback-Engine

./: CMakeLists.txt  Makefile  cmake_install.cmake  dbManager.hpp  feedbackDbus.hpp  feedback_adaptor.h  foflPredict.cpp  main.cpp  nvmeSmartManager.cpp  sensorMonitoring.cpp  sensorMonitoring.hpp
FeedbackModule/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dbManager.cpp  dbManager.hpp  feedback.xml  feedbackDbus.cpp  feedbackDbus.hpp  feedback_proxy.h  foflManager.cpp  foflManager.hpp  foflPredict.cpp  main.cpp  nvmeSmartManager.cpp  nvmeSmartManager.hpp  policyController.cpp  policyController.hpp  restHandler.cpp  restHandler.hpp  sensorMonitoring.cpp  sensorMonitoring.hpp  stdafx.hpp
FeedbackModule/include/dataType/: dataType.h
FeedbackModule/include/dbus/: policy_proxy.h
FeedbackYJ/: CMakeLists.txt  dbManager.cpp  feedback.xml  feedbackDbus.cpp  feedbackDbus.hpp  feedback_adaptor.h  foflManager.cpp  foflManager.hpp  policyController.hpp  sensorMonitoring.cpp  sensorMonitoring.hpp
FeedbackYJ/include/dbus/: energy_proxy.hpp  policy_proxy.h
src/: feedbackDbus.cpp  foflManager.cpp  foflManager.hpp  foflPredict.hpp  kernelPanicCheck.cpp  kernelPanicCheck.hpp  policy.xml  restHandler.cpp  restHandler.hpp
